--- a/src/Styles/Body.css
+++ b/src/Styles/Body.css
@@ -20,7 +20,8 @@
   padding-bottom: 12px;
 }
 
-.cardContainer .card {
+/* .cardContainer .card {
+  position: relative;
   width: 307.25px;
   height: 377.04px;
   border-radius: 30px;
@@ -32,12 +33,24 @@
   cursor: pointer;
 }
 
+.transparency {
+  position: absolute;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(
+    180deg,
+    rgba(196, 196, 196, 0) 0%,
+    #000000 124.28%
+  );
+}
+
 .cardContainer .card img {
   height: 100%;
   margin-left: -131px;
 }
 
-.cardContainer .card h2 {
+.textCard h2 {
   color: #fff;
   margin-top: -148px;
   position: absolute;
@@ -45,6 +58,27 @@
   font-size: 29px;
   line-height: 54px;
 }
+
+.textCard {
+  background-color: red;
+}
+
+.textCard img {
+  position: relative;
+  width: 80px;
+  margin-top: -100px;
+  padding-bottom: 100px;
+  margin-right: 75px;
+}
+
+.textCard h1 {
+  margin-top: -201px;
+  font-size: 75px;
+  position: relative;
+  margin-left: 31px;
+  -webkit-text-stroke: 2px #fff;
+  color: transparent;
+} */
 
 .subscriptionContainer {
   display: flex;
