--- a/src/Styles/Footer.css
+++ b/src/Styles/Footer.css
@@ -1,9 +1,38 @@
 .footerContainer {
   position: absolute;
-  width: 1512px;
+  width: 100%;
   height: 102px;
   left: 0px;
   top: 1884px;
-
   background: #780ae6;
+}
+
+footer {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 77px;
+  padding-right: 77px;
+  padding-top: 41px;
+  padding-bottom: 43px;
+}
+
+.menuFooter {
+  display: flex;
+  color: #fff;
+}
+
+.menuFooter h4 {
+  margin-right: 54px;
+  cursor: pointer;
+  position: relative;
+}
+
+.icons {
+  display: flex;
+}
+
+.icons img {
+  height: 30px;
+  margin-left: 35px;
+  cursor: pointer;
 }
