--- a/src/Styles/CardsCitys.css
+++ b/src/Styles/CardsCitys.css
@@ -36,17 +36,11 @@
   display: flex;
   flex-direction: column;
   z-index: 133;
-  margin-top: -362px;
+  /* margin-top: -362px; */
   padding-left: 20px;
   padding-right: 20px;
-}
-
-.textCard h2 {
-  color: #fff;
-  margin-top: 200px;
+  padding-bottom: 10px;
   position: absolute;
-  font-size: 34px;
-  line-height: 54px;
 }
 
 .textCard h3 {
@@ -54,18 +48,52 @@
   color: #fff;
 }
 
-.textCard img {
-  position: absolute;
-  margin-top: 237px;
-  padding-bottom: 254px;
-  margin-left: -23px;
+.textCard h4 {
+  margin-top: 5px;
+  color: #fff;
+  text-transform: capitalize;
+  margin-right: -17px;
 }
 
-.textCard h1 {
-  margin-top: 206px;
-  font-size: 83px;
+.containterNameDescription {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-top: 158px;
+}
+
+.containterNameDescription h4 {
+  color: #fff;
   position: relative;
-  margin-left: 85px;
+  line-height: 54px;
+  margin-top: -20px;
+  font-weight: 200;
+  font-size: 15px;
+}
+
+.containterNameDescription h2 {
+  color: #fff;
+  /* margin-top: 200px;
+    position: absolute; */
+  font-size: 34px;
+  line-height: 54px;
+}
+
+.containerWeather {
+  display: flex;
+  margin-top: -30px;
+}
+
+.containerWeather img {
+  position: absolute;
+  /* margin-top: 237px; */
+  padding-bottom: 275px;
+  margin-left: -14px;
+}
+
+.containerWeather h1 {
+  font-size: 68px;
+  margin-left: 105px;
   -webkit-text-stroke: 2px #fff;
   color: transparent;
 }
