Desarrollo del enrutamiento del proyecto

--- a/src/Styles/CardsCitys.css
+++ b/src/Styles/CardsCitys.css
@@ -85,15 +85,24 @@
 }
 
 .containerWeather img {
-  position: absolute;
+  /* position: absolute; */
   /* margin-top: 237px; */
-  padding-bottom: 275px;
+  /* padding-bottom: 275px; */
   margin-left: -14px;
+}
+
+.tempCard {
+  width: 156px;
 }
 
 .containerWeather h1 {
   font-size: 68px;
-  margin-left: 105px;
-  -webkit-text-stroke: 2px #fff;
+  margin-left: 33px;
+  margin-top: -4px;
+  -webkit-text-stroke: 1px #fff;
   color: transparent;
+}
+
+.containerWeather sup {
+  font-size: 41px;
 }
