Cambio el formato Hora por dia

--- a/src/Styles/CardsCitys.css
+++ b/src/Styles/CardsCitys.css
@@ -52,7 +52,7 @@
   margin-top: 5px;
   color: #fff;
   text-transform: capitalize;
-  margin-right: -17px;
+  /* margin-right: -17px; */
 }
 
 .containterNameDescription {
